@@ -2,6 +2,7 @@
 Version: 2.2.6
 Date: ????
   Changes:
+    - Adjusted behavior of setting description default appending to allow for existing localised descriptions, and added a blacklist to ignore specified sets of mod settings
 ---------------------------------------------------------------------------------------------------
 Version: 2.2.5
 Date: 2020-11-25
